update signature verify algorithm